force-app/main/default/objects/Survey_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dropdown</fullName>
                <label>Dropdown</label>
            </value>
            <value>
                <fullName>opinion_scale</fullName>
                <label>Opinion Scale</label>
            </value>
            <value>
                <fullName>picture_choice</fullName>
                <label>Picture choice</label>
            </value>
            <value>
                <fullName>multiple_choice</fullName>
                <label>Multiple Choice</label>
            </value>
            <value>
                <fullName>yes_no</fullName>
                <label>Sí / No</label>
            </value>
            <value>
                <fullName>Range</fullName>
                <isActive>false</isActive>
                <label>Range</label>
            </value>
            <value>
                <fullName>number</fullName>
                <isActive>false</isActive>
                <label>number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>