force-app/main/default/objects/Survey_Question__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>2056</length>
    <type>LongTextArea</type>
</CustomField>