force-app/main/default/objects/Survey_Question__c/fields/TypeformId__c.field-meta.xml
<CustomField>
    <fullName>TypeformId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TypeformId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>